sshme-in/storage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storage
  labels:
    istio.io/dataplane-mode: ambient
    goldilocks.fairwinds.com/enabled: "true"
