sshme-in/storage/auth-policy.yaml

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-outline-to-redis
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["apps"]
